5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1758_1576.log
== TEST (2019-05-23 11:14:57) 
-- CODE:
from numpy import *
j1 = array(eval(int(input("Primeiro vetor: "))))
j2 = array(eval(int(input("Segundo vetor: "))))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(ji))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:16:41) 
-- CODE:
from numpy import *
j1 = array(eval(int(input("Primeiro vetor: "))))
j2 = array(eval(int(input("Segundo vetor: "))))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(ji))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:17:03) 
-- CODE:
from numpy import *
j1 = array(eval(input("Primeiro vetor: "))))
j2 = array(eval(input("Segundo vetor: "))))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(ji))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
File "XXXX", line 2
    j1 = array(eval(input())))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:22) 
-- CODE:
from numpy import *
j1 = array(eval(input("Primeiro vetor: ")))
j2 = array(eval(input("Segundo vetor: ")))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(ji))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:24) 
-- CODE:
from numpy import *
j1 = array(eval(input("Primeiro vetor: ")))
j2 = array(eval(input("Segundo vetor: ")))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(j1))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:31) 
-- CODE:
from numpy import *
j1 = array(eval(input("Primeiro vetor: ")))
j2 = array(eval(input("Segundo vetor: ")))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(j1))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:21:10) 
-- CODE:
from numpy import *
j1 = array(eval(input("Primeiro vetor: ")))
j2 = array(eval(input("Segundo vetor: ")))
i = 0
soma1 = 0
soma2 = 0
while (i < size(j1)):
	if (j1[i] == 11 and j2[i] == 33) or (j1[i] == 22 and j2[i] == 11) or (j1[i] == 33 and j2[1] == 22):
		soma1 = soma1 + 1
	elif (j2[i] == 11 and j1[i] == 33) or (j2[i] == 22 and j1[i] == 11) or (j2[i] == 33 and j2[i] == 22):
		soma2 = soma2 + 1
	else:
		msg = "EMPATE"
	i = i + 1
print(size(j1))
if(soma1 > soma2):
	msg = "EUSAPIA"
elif(soma1 < soma2):
	msg = "BARSANULFO"
else:
	msg = "EMPATE"
print(msg)
	
-- EXECUTION TIME:
0.389285
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
